--- a/root/site/header.html
+++ b/root/site/header.html
@@ -18,6 +18,7 @@
     <& '/site/top.html' &>
     <script type="text/javascript" src="/site/tablegrid.js"></script>
     <script type="text/javascript" src="/site/tabfu.js"></script>
+    <script type="text/javascript" src="/site/help.js"></script>
     <script type="text/javascript" src="/site/runner.js"></script>
     <script type="text/javascript" src="/site/panelresizer.js"></script>
     <script type="text/javascript" src="/static/livegrid/livegrid-all.js"></script>
@@ -35,6 +36,13 @@
 
     <link rel="stylesheet" type="text/css" href="/static/livegrid/resources/css/ext-ux-livegrid.css" /> 
 
+    <!-- superbox -->
+    <script type="text/javascript" src="/static/superbox/superbox.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/superbox/superbox.css" /> 
+
+    <!-- model depends on superbox -->
+    <script type="text/javascript" src="/site/model.js"></script>
+
     <!-- Hooks -->
 % for my $include ( _array $c->stash->{header_include} ) {
     <!-- BEGIN <% $include->{name} %> -->
@@ -48,6 +56,14 @@ Ext.onReady(function(){
     Ext.BLANK_IMAGE_URL = '/static/ext/resources/images/default/s.gif';
     Ext.QuickTips.init();
     Ext.state.Manager.setProvider(new Ext.state.CookieProvider());
+    Baseliner.help_menu = new Ext.menu.Menu({});
+    Baseliner.help_button = new Ext.Button({
+       icon: '/static/images/icons/lightbulb_off.gif',
+       cls: 'x-btn-icon',
+       hidden: true,
+       menu: Baseliner.help_menu
+    });
+    Baseliner.help_button.on('click', Baseliner.help_off );
     var tb = new Ext.Toolbar({
         id: 'mainMenu',
         region: 'north',
@@ -59,6 +75,7 @@ Ext.onReady(function(){
 % if( $show_menu && scalar @{ $c->stash->{menus} || [] } ) {  print join ',',@{ $c->stash->{menus} }; } else { print '{ }' }
             ,
             '->',
+            Baseliner.help_button,
             '<img src="/static/images/icons/refresh.gif" style="border:0px;" onclick="Baseliner.refreshCurrentTab()" onmouseover="this.style.cursor=\'hand\'" />',
             '<img src="/static/images/icons/application_double.gif" style="border:0px;" onclick="Baseliner.detachCurrentTab()" onmouseover="this.style.cursor=\'hand\'" />',
             '-', 
