--- a/root/email/approval_job.html
+++ b/root/email/approval_job.html
@@ -9,6 +9,9 @@
 	$url_reject
 	$jobname 
 </%args>
+<%init>
+    use Baseliner::Utils;
+</%init>
 <head>
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
