--- a/root/site/top.html
+++ b/root/site/top.html
@@ -19,7 +19,8 @@
     <script type="text/javascript" src="/static/ext/ext-all<% $debug %>.js"></script>
     <!-- script type="text/javascript" src="/static/ext/jitx<% $debug %>.js"></script -->
 
-    <script type="text/javascript" src="/static/ext/build/locale/ext-lang-es-min.js"></script>
+    <!-- <script type="text/javascript" src="/static/ext/build/locale/ext-lang-es-min.js"></script> -->
+    <script type="text/javascript" src="/static/ext/src/locale/ext-lang-es.js"></script>
 
     <link rel="stylesheet" type="text/css" href="/static/ext/docs/resources/docs.css" />
     <link rel="stylesheet" type="text/css" href="/static/site.css" />
