stacktrace and tab F5 refresh with key events

--- a/root/site/top.html
+++ b/root/site/top.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="/static/metal/metal.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/static/ext/resources/css/ext-all.css" />
 
+    <script type="text/javascript" src="/site/stacktrace.js"></script>
+
     <script type="text/javascript" src="/static/ext/adapter/ext/ext-base.js"></script>
     <script type="text/javascript" src="/static/ext/ext-all<% $debug %>.js"></script>
     <!-- script type="text/javascript" src="/static/ext/jitx<% $debug %>.js"></script -->
