--- a/root/site/login.html
+++ b/root/site/login.html
@@ -107,7 +107,7 @@ Ext.onReady(function(){
 });
 </script>
 <body>
-<div class='band-gray'></div>
-<div class='band-white'></div>
-<img class='logo' src='/static/images/logo_big.jpg'></img>
+<div class="band-gray"></div>
+<div class="band-white"></div>
+<img class="logo" src="<% $c->config->{login_logo} || '/static/images/logo_big.jpg' %>"></img>
 </body>
