--- a/root/site/header.html
+++ b/root/site/header.html
@@ -66,7 +66,7 @@ Ext.onReady(function(){
         height: 45,
         //height: 34,
         items: [
-            '<img src="/static<% $c->stash->{theme_dir} %>/images/logo.jpg" style="border:0px;"/>',
+            '<img src="/static<% $c->stash->{theme_dir} %>/images/<% $c->config->{logo_filename} || 'logo.jpg' %>" style="border:0px;"/>',
             '-',
 % if( $show_menu && scalar @{ $c->stash->{menus} || [] } ) {  print join ',',@{ $c->stash->{menus} }; } else { print '{ }' }
             ,
