clobs and triggers on schema

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -1,6 +1,7 @@
 <%args>
     $show_main => 0
     $show_portal => 1
+    $show_dashboard => 0
     $show_menu => 1
     $show_lifecycle => 1
 </%args>
@@ -140,12 +141,17 @@ Ext.onReady(function(){
                 layoutOnTabChange: true,
                 autoScroll: true,
                 activeTab: 0, 
-                items: 
+                items: [
 % if( $show_main eq '1' ) {
-                [ {title:_loc('Main'), closable: false, autoLoad: '/site/main.html', scripts: true, cls: 'tab-style' } ]
+                {title:_loc('Main'), closable: false, autoLoad: '/site/main.html', scripts: true, cls: 'tab-style' }
 % } elsif( $show_portal ) {
-                [ { xtype: 'panel', title:_loc('Portal'), layout: 'border', closable: false, items: Baseliner.portal } ]
-% } else { print 'null' } 
+                { xtype: 'panel', title:_loc('Portal'), layout: 'border', closable: false, items: Baseliner.portal }
+% } else { print '' } 
+
+% if( $show_dashboard ) {
+                ,{title:_loc('Dashboard'), closable: false, autoLoad: '/site/dashboard.html', scripts: true, cls: 'tab-style' } 
+% }
+            ]
             })
 % } # site_raw
         ]
