--- a/root/site/header.html
+++ b/root/site/header.html
@@ -149,7 +149,8 @@ Ext.onReady(function(){
 % } else { print '' } 
 
 % if( $show_dashboard ) {
-                ,{title:_loc('Dashboard'), closable: false, autoLoad: '/site/dashboard.html', scripts: true, cls: 'tab-style' } 
+                //,{title:_loc('Dashboard'), closable: false, autoLoad: '/site/dashboard.html', scripts: true, cls: 'tab-style' }
+                ,{title:_loc('Dashboard'), closable: false, autoLoad: '/dashboard/list', scripts: true, cls: 'tab-style' }
 % }
             ]
             })
