sacar los estilos del dashboard a una hoja de estilos externa, para su correcta visualizacion en i.e

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="/site/portal/PortalUtil.js"></script>
     <link rel="stylesheet" type="text/css" href="/site/portal/portal.css" />
     <link rel="stylesheet" type="text/css" href="/site/portal/sample.css" />
+    <link rel="stylesheet" type="text/css" href="/site/portal/dashboard.css" />
 
     <link rel="stylesheet" type="text/css" href="/static/livegrid/resources/css/ext-ux-livegrid.css" /> 
 
