cambios en dashboard

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -56,6 +56,8 @@
     <script type="text/javascript" src="/site/lifecycle.js"></script>
 
     <!-- Portal Stuff -->
+    <link rel="stylesheet" type="text/css" href="/site/bootstrap/css/bootstrap.css" />
+    
     <script type="text/javascript" src="/site/portal/Portal.js"></script>
     <script type="text/javascript" src="/site/portal/PortalColumn.js"></script>
     <script type="text/javascript" src="/site/portal/Portlet.js"></script>
