--- a/root/site/header.html
+++ b/root/site/header.html
@@ -57,6 +57,7 @@
 
     <!-- Portal Stuff -->
     <link rel="stylesheet" type="text/css" href="/site/bootstrap/css/bootstrap.css" />
+    <script type="text/javascript" src="/site/bootstrap/js/bootstrap.js"></script>
     
     <script type="text/javascript" src="/site/portal/Portal.js"></script>
     <script type="text/javascript" src="/site/portal/PortalColumn.js"></script>
