--- a/root/site/header.html
+++ b/root/site/header.html
@@ -56,7 +56,8 @@
     <script type="text/javascript" src="/site/lifecycle.js"></script>
 
     <!-- Portal Stuff -->
-    <link rel="stylesheet" type="text/css" href="/site/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet/less" type="text/css" href="/site/bootstrap.css" />
+    <script type="text/javascript" src="/site/less.js"></script>
     
     <script type="text/javascript" src="/site/portal/Portal.js"></script>
     <script type="text/javascript" src="/site/portal/PortalColumn.js"></script>
