--- a/root/site/header.html
+++ b/root/site/header.html
@@ -56,6 +56,11 @@
     <script type="text/javascript" src="/site/lifecycle.js"></script>
 
     <!-- Portal Stuff -->
+    <link rel="stylesheet" type="text/css" href="/site/960-Grid-System/code/css/960_24_col.css" />
+    <!--<link rel="stylesheet/less" type="text/css" href="/site/960-Grid-System/code/css/reset.css" />-->
+    <!--<link rel="stylesheet/less" type="text/css" href="/site/960-Grid-System/code/css/text.css" />-->
+    <link rel="stylesheet" type="text/css" href="/site/960-Grid-System/code/css/demo.css" />
+    
     <link rel="stylesheet/less" type="text/css" href="/site/bootstrap.css" />
     <script type="text/javascript" src="/site/less.js"></script>
     <script type="text/javascript" src="/site/bootstrap/js/bootstrap.js"></script>
