--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -10,6 +10,60 @@
 
 </%perl>
 
+<div class="container_24" style="margin: 10px 10px 10px 10px">
+<div class="grid_4">
+    TEst
+</div>
+<div class="grid_20"> 
+<div id="boot"> 
+<body>
+      <table class="table table-striped table-bordered table-condensed">
+        <thead>
+          <tr>
+            <th></th>
+            <th colspan="2">Full name</th>
+            <th></th>
+          </tr>
+          <tr>
+            <th>#</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Username</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+          </tr><tr>
+            <td>1</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <td>32</td>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+% for( 1..25 ) {
+          <tr>
+            <td><% $_ %></td>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+% }
+        </tbody>
+      </table>
+</body>
+</div>
+</div>
+<div class="clear"></div> 
+<div class="grid_24">
     <div id="topico" style="height:20%;padding:0px 50px 0px 50px;">
         <div class="rectangle-border">
             <h1><%$title%></h1>
@@ -28,3 +82,5 @@
         </div>
 %}
     </div>
+</div> 
+</div> 
