--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -10,77 +10,52 @@
 
 </%perl>
 
-<div class="container_24" style="margin: 10px 10px 10px 10px">
-<div class="grid_4">
-    TEst
-</div>
-<div class="grid_20"> 
-<div id="boot"> 
-<body>
-      <table class="table table-striped table-bordered table-condensed">
-        <thead>
-          <tr>
-            <th></th>
-            <th colspan="2">Full name</th>
-            <th></th>
-          </tr>
-          <tr>
-            <th>#</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Username</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-          </tr><tr>
-            <td>1</td>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <td>32</td>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
-% for( 1..25 ) {
-          <tr>
-            <td><% $_ %></td>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
-% }
-        </tbody>
-      </table>
-</body>
-</div>
-</div>
-<div class="clear"></div> 
-<div class="grid_24">
-    <div id="topico" style="height:20%;padding:0px 50px 0px 50px;">
-        <div class="rectangle-border">
-            <h1><%$title%></h1>
-            <p><%$description%></p>
-        </div>
+<div id="boot" class="container_24" style="margin: 10px 10px 10px 10px">
+    <div class="grid_24"> 
+          <table class="table table-striped table-bordered table-condensed">
+            <thead>
+              <tr>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+              </tr>
+              <tr>
+                <th><h3>Name</h3></th>
+                <td><% $title %></td>
+              </tr>
+              <tr>
+                <th><h3>Description</h3></th>
+                <td><% $description %></td>
+              </tr>
+            </tbody>
+          </table>
     </div>
 
-    <div id="form_common"></div>
-    <div id="form"></div>
+    <div class="clear"></div>
 
-    <div id="comments" name="comments" style="overflow:auto;height:80%;padding:0px 100px 0px 100px;">
+    <ul class="nav nav-tabs">
+      <li class="active">
+        <a href="#" data-toggle="tab"><% _loc('Comments') %></a>
+      </li>
+      <li><a href="#" data-toggle="tab"><% _loc('Activity') %></a></li>
+    </ul>
+
+    <div class="grid_24">
+
 %   foreach my $comentario (_array @comentarios){
-        <div class="comment">
-            <p class="triangle-border"><%$comentario->{text}%></p>
-            <h3 class="separacion-comment" style="padding:15px;">Creada por <%$comentario->{created_by}%>, <%$comentario->{created_on}->dmy%> <%$comentario->{created_on}->hms%></h3>
-        </div>
+            <div class="well">
+                <p><% $comentario->{text} %></p>
+                <p><small>Creada por <%$comentario->{created_by}%>, <%$comentario->{created_on}->dmy%> <%$comentario->{created_on}->hms%></small></p>
+            </div>
 %}
-    </div>
-</div> 
+%   foreach ( 1..20 ){
+            <div class="well">
+                <p><% $_ %></p>
+                <p><small>Creada por <% $_ %>, <% $_ %> <% $_ %></small></p>
+            </div>
+%}
+    </div> 
 </div> 
