--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -1,34 +1,26 @@
 <%args>
     $form => '/forms/base.js'
+    $id
+    $title
+    $description
+    $comments
+    $category
 </%args>
-<%perl>
-    use Baseliner::Utils;
-    my @comentarios = $c->stash->{comments};
-    my $title = $c->stash->{title};
-    my $description = $c->stash->{description};  
-    my $id = rand(9999999999999999);
-
-</%perl>
-
 <div id="boot" class="container_24" style="margin: 10px 10px 10px 10px">
     <div class="grid_24"> 
           <table class="table table-striped table-bordered table-condensed">
-            <thead>
-              <tr>
-                <th>&nbsp;</th>
-                <th>&nbsp;</th>
-              </tr>
-            </thead>
             <tbody>
               <tr>
               </tr>
               <tr>
-                <th><h3>Name</h3></th>
-                <td><% $title %></td>
+                <th colspan="2"><% $category %>: #<% $id %></th>
               </tr>
               <tr>
-                <th><h3>Description</h3></th>
-                <td><% $description %></td>
+                <th colspan="2"><h3><% $title %></h3></th>
+              </tr>
+              <tr>
+                <th><h3><% _loc('Description') %></h3></th>
+                <td><% $description || '&nbsp;' %></td>
               </tr>
             </tbody>
           </table>
@@ -45,7 +37,7 @@
 
     <div class="grid_24">
 
-%   foreach my $comentario (_array @comentarios){
+%   foreach my $comentario (_array $comments){
             <div class="well">
                 <p><% $comentario->{text} %></p>
                 <p><small>Creada por <%$comentario->{created_by}%>, <%$comentario->{created_on}->dmy%> <%$comentario->{created_on}->hms%></small></p>
