--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -5,22 +5,28 @@
     $description
     $comments
     $category
+    $category_color
 </%args>
+<%perl>
+    my $ii = int rand(999999999999999);
+</%perl>
 <div id="boot" class="container_24" style="margin: 10px 10px 10px 10px">
     <div class="grid_24"> 
-          <table class="table table-striped table-bordered table-condensed">
+          <table class="table table-bordered table-condensed">
             <tbody>
               <tr>
+                <th width="1" style="vertical-align: middle">
+                    <span class="badge" style="background: <% $category_color %>"><% $category %> #<% $id %></span>
+                </th>
+                <th>
+                    <h3><% $title %></h3>
+                </th>
               </tr>
               <tr>
-                <th colspan="2"><% $category %>: #<% $id %></th>
+                <th colspan="2"><% _loc('Description') %>:</th>
               </tr>
               <tr>
-                <th colspan="2"><h3><% $title %></h3></th>
-              </tr>
-              <tr>
-                <th><h3><% _loc('Description') %></h3></th>
-                <td><% $description || '&nbsp;' %></td>
+                <td colspan="2"><% $description || '&nbsp;' %></td>
               </tr>
             </tbody>
           </table>
@@ -30,24 +36,32 @@
 
     <ul class="nav nav-tabs">
       <li class="active">
-        <a href="#" data-toggle="tab"><% _loc('Comments') %></a>
+        <a href="#comments<% $ii %>" data-toggle="tab"><% _loc('Comments') %></a>
       </li>
-      <li><a href="#" data-toggle="tab"><% _loc('Activity') %></a></li>
+      <li><a href="#activity<% $ii %>" data-toggle="tab"><% _loc('Activity') %></a></li>
     </ul>
 
     <div class="grid_24">
-
+<div class="tab-content">
+  <div class="tab-pane active" id="comments<% $ii %>">
 %   foreach my $comentario (_array $comments){
             <div class="well">
                 <p><% $comentario->{text} %></p>
                 <p><small>Creada por <%$comentario->{created_by}%>, <%$comentario->{created_on}->dmy%> <%$comentario->{created_on}->hms%></small></p>
             </div>
 %}
-%   foreach ( 1..20 ){
-            <div class="well">
-                <p><% $_ %></p>
-                <p><small>Creada por <% $_ %>, <% $_ %> <% $_ %></small></p>
-            </div>
+  </div>
+  <div class="tab-pane" id="activity<% $ii %>">
+%  foreach ( 1..20 ){
+       <div style="margin-left: 20px">
+            <p><% $_ %>
+            <small>Creada por <% $_ %>, <% $_ %> <% $_ %></small>
+            </p>
+            <hr />
+       </div>
 %}
+  </div>
+</div>
+
     </div> 
 </div> 
