--- a/root/site/header.html
+++ b/root/site/header.html
@@ -84,6 +84,9 @@
     <!-- link rel="stylesheet" type="text/css" href="/site/960-Grid-System/code/css/demo.css" / -->
     <script type="text/javascript" src="/site/bootstrap/js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="/site/boot.css" /> 
+    <!-- #reset namespace
+    <link rel="stylesheet" type="text/css" href="/site/reset.css" /> 
+    -->
     
     <!-- Hooks -->
 % for my $include ( _array $c->stash->{header_include} ) {
