--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -10,6 +10,7 @@
     $created_on
     $deadline
     $status
+    $events
 </%args>
 <%perl>
     my $ii = int rand(999999999999999);
@@ -115,10 +116,10 @@
 %}
   </div>
   <div class="tab-pane" id="activity<% $ii %>">
-%  foreach ( 1..20 ){
+%  foreach ( _array $events ) {
        <div style="margin-left: 20px">
-            <p><% $_ %>
-            <small>Creada por <% $_ %>, <% $_ %> <% $_ %></small>
+            <p><% $_->{text} %>
+%#            <small>Creada por <% $_->{username} %>, <% $_->{username} %> <% $_ %></small>
             </p>
             <hr />
        </div>
