upload file working, no delete yet; _size_unit; fixed master table geenrator error, file_version now

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -67,6 +67,9 @@
     
     <link rel="stylesheet" type="text/css" href="/static/livegrid/resources/css/ext-ux-livegrid.css" /> 
 
+    <!-- uploader drag-drop -->
+    <script type="text/javascript" src="/static/valums/fileuploader.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/valums/fileuploader.css" />
     <!-- superbox -->
     <script type="text/javascript" src="/static/superbox/superbox.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/superbox/superbox.css" /> 
