--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -2,6 +2,7 @@
     $ii
     $form => '/forms/base.js'
     $id
+    $mid
     $title
     $description
     $comments
@@ -51,15 +52,16 @@
                         <% _loc("Files") %>
                       </li>
                     </ul>
-                    <ul class="">
+                    <ul class="" style="margin-left: 20px">
                       <li class="">
 % foreach my $file ( _array( $files ) ) {
+%   my $fii = $ii . '_' . $file->{md5};
 %   my $target = $file->{extension} =~ /pdf|htm|html|txt|properties/i ? '_blank' : 'FD';  # download or try to show on next tab?
 %   my ($size,$units) = Baseliner::Utils::_size_unit( $file->{filesize} );
-                      <li>
+                      <li id="<% $fii %>">
                         <a href="/topic/download_file/<% $file->{md5} %>/<% $file->{filename} %>" target="<% $target %>">
                           <i class="icon-file"></i> <% Baseliner::Utils::_html_escape( $file->{filename} ) %>
-                        </a> (<% $size %> <% $units %>) | <a href="/topic/file/delete/<% $file->{md5} %>"><i class="icon-trash"></i></a>
+                        </a> (<% $size %> <% $units %>) | <a href="javascript:Baseliner.Topic.file_del('<% $mid %>', '<% $file->{md5} %>', '<% $fii %>')"><i class="icon-trash"></i></a>
                         <!-- div class="btn-group">
                               <button class="btn btn-primary dropdown-toggle btn-mini" data-toggle="dropdown">v4 <span class="caret"></span></button>
                               <ul class="dropdown-menu">
@@ -94,9 +96,10 @@
     </ul>
 
     <div class="grid_24">
-<div class="tab-content">
-  <div class="tab-pane active" id="comments<% $ii %>">
-%   foreach my $com ( _array( $comments) ){
+        <div class="tab-content">
+          <div class="tab-pane active" id="comments<% $ii %>">
+
+% foreach my $com ( _array( $comments) ){
 %      my $id_div_com =  "comment_$com->{id}_$ii";
             <div style="margin-left: 20px" id="<% $id_div_com %>">  <!-- class 'well' -->
 %      if( $com->{content_type} eq 'code' )  {
@@ -110,26 +113,26 @@
                 <p><% $com->{text} %></p>
 %      } 
                 <p><small><%$com->{created_by}%>, <%$com->{created_on}->dmy%> <%$com->{created_on}->hms%>
-% if( $c->username eq $com->{created_by} ) {
+%    if( $c->username eq $com->{created_by} ) {
                     | <a href="javascript:Baseliner.Topic.comment_edit( undefined, <% $com->{id} %>)"><% _loc("edit") %></a>
                     | <a href="javascript:Baseliner.Topic.comment_delete(<% $com->{id} %>, '<% $id_div_com %>')"><% _loc("delete") %></a>
-% }
+%    }
                 </small></p>
                 <hr />
             </div>
 %}
-  </div>
-  <div class="tab-pane" id="activity<% $ii %>">
-%  foreach ( _array( $events ) ) {
-       <div style="margin-left: 20px">
-            <p><% $_->{text} %>
-%#            <small>Creada por <% $_->{username} %>, <% $_->{username} %> <% $_ %></small>
-            </p>
-            <hr />
-       </div>
-%}
-  </div>
-</div>
+          </div>  <!-- comment tab -->
 
-    </div> 
-</div> 
+          <div class="tab-pane" id="activity<% $ii %>">
+%  foreach ( _array( $events ) ) {
+            <div style="margin-left: 20px">
+             <p><% $_->{text} %>
+%#             <small>Creada por <% $_->{username} %>, <% $_->{username} %> <% $_ %></small>
+             </p>
+             <hr />
+            </div> 
+          </div> <!-- activity tab -->
+%}
+      </div> <!-- tab content -->
+  </div> <!-- lower grid -->
+</div> <!-- boot container -->
