--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -56,7 +56,7 @@
                       <li class="">
 % foreach my $file ( _array( $files ) ) {
 %   my $fii = $ii . '_' . $file->{md5};
-%   my $target = $file->{extension} =~ /pdf|htm|html|txt|properties/i ? '_blank' : 'FD';  # download or try to show on next tab?
+%   my $target = $file->{extension} =~ /pdf|htm|html|txt|properties/i ? '_blank' : 'FrameDownload';  # download or try to show on next tab?
 %   my ($size,$units) = Baseliner::Utils::_size_unit( $file->{filesize} );
                       <li id="<% $fii %>">
                         <a href="/topic/download_file/<% $file->{md5} %>/<% $file->{filename} %>" target="<% $target %>">
@@ -77,7 +77,7 @@
 % }
                     </ul>
                     <p>
-                    <div id="uploader_<% $ii %>"></div>
+%#                    <div id="uploader_<% $ii %>"></div>
                     </p>
                 
                 </td>
