topic in topic, user avatar basic on topic msg and User controller (still missing the generated icon)

--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -14,6 +14,7 @@
     $status
     $events
     $files
+    $topics
 </%args>
 <div id="boot" class="container_24" style="margin: 10px 10px 10px 10px">
     <div class="grid_24"> 
@@ -47,6 +48,24 @@
               </tr>
               <tr>
                 <td colspan="2">
+% if( _array( $topics ) ) {
+                    <ul class="nav nav-list">
+                      <li class="nav-header">
+                        <% _loc("Topics") %>
+                      </li>
+                    </ul>
+                    <ul class="" style="margin-left: 20px">
+                      <li class="">
+% foreach my $topic ( _array( $topics ) ) {
+                      <li style="margin: 6px 0px 6px 0px">
+                          <span class="badge" onclick="javascript:Baseliner.show_topic(<% $topic->{id} %>, '<% $topic->{name} %>')" 
+                            style="float:left;padding:2px 8px 2px 8px;cursor:pointer;background: <% $topic->{color} %>"><% $topic->{name} %></span>
+                            &nbsp;&nbsp;<b><% $topic->{title} %></b>
+                      </li>
+% }
+                    </ul>
+% }
+% if( _array( $files ) ) {
                     <ul class="nav nav-list">
                       <li class="nav-header">
                         <% _loc("Files") %>
@@ -59,23 +78,14 @@
 %   my $target = $file->{extension} =~ /pdf|htm|html|txt|properties/i ? '_blank' : 'FrameDownload';  # download or try to show on next tab?
 %   my ($size,$units) = Baseliner::Utils::_size_unit( $file->{filesize} );
                       <li id="<% $fii %>">
+                        <i class="icon-file"></i> 
                         <a href="/topic/download_file/<% $file->{md5} %>/<% $file->{filename} %>" target="<% $target %>">
-                          <i class="icon-file"></i> <% Baseliner::Utils::_html_escape( $file->{filename} ) %>
-                        </a> (<% $size %> <% $units %>) | <a href="javascript:Baseliner.Topic.file_del('<% $mid %>', '<% $file->{md5} %>', '<% $fii %>')"><i class="icon-trash"></i></a>
-                        <!-- div class="btn-group">
-                              <button class="btn btn-primary dropdown-toggle btn-mini" data-toggle="dropdown">v4 <span class="caret"></span></button>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">v3</a></li>
-                                <li><a href="#">v2</a></li>
-                                <li><a href="#">v1</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Delete</a></li>
-                              </ul>
-                        </div -->
-                        
+                          <% Baseliner::Utils::_html_escape( $file->{filename} ) %>
+                        </a> (<% $size %> <% $units %>) 
                       </li>
 % }
                     </ul>
+% }
                     <p>
 %#                    <div id="uploader_<% $ii %>"></div>
                     </p>
@@ -112,7 +122,7 @@
 %      } else {
                 <p><% $com->{text} %></p>
 %      } 
-                <p><small><%$com->{created_by}%>, <%$com->{created_on}->dmy%> <%$com->{created_on}->hms%>
+                <p><small><b><%$com->{created_by}%></b>, <%$com->{created_on}->dmy%> <%$com->{created_on}->hms%>
 %    if( $c->username eq $com->{created_by} ) {
                     | <a href="javascript:Baseliner.Topic.comment_edit( undefined, <% $com->{id} %>)"><% _loc("edit") %></a>
                     | <a href="javascript:Baseliner.Topic.comment_delete(<% $com->{id} %>, '<% $id_div_com %>')"><% _loc("delete") %></a>
@@ -126,13 +136,11 @@
           <div class="tab-pane" id="activity<% $ii %>">
 %  foreach ( _array( $events ) ) {
             <div style="margin-left: 20px">
-             <p><% $_->{text} %>
-%#             <small>Creada por <% $_->{username} %>, <% $_->{username} %> <% $_ %></small>
-             </p>
+             <p><img style="margin: 4px" src="/user/avatar/<% $_->{username} %>/image.png" /><% $_->{text} %></p>
              <hr />
             </div> 
-          </div> <!-- activity tab -->
 %}
+          </div> <!-- activity tab -->
       </div> <!-- tab content -->
   </div> <!-- lower grid -->
 </div> <!-- boot container -->
