--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -1,8 +1,7 @@
 <%args>
     $ii
     $form => '/forms/base.js'
-    $id
-    $mid
+    $topic_mid
     $title
     $description
     $comments
@@ -22,7 +21,7 @@
             <tbody>
               <tr>
                 <th width="1" style="vertical-align: middle">
-                    <span class="badge" style="background: <% $category_color %>"><% $category %> #<% $id %></span>
+                    <span class="badge" style="background: <% $category_color %>"><% $category %> #<% $topic_mid %></span>
                 </th>
                 <th>
                     <h3><% $title %></h3>
@@ -58,7 +57,7 @@
                       <li class="">
 % foreach my $topic ( _array( $topics ) ) {
                       <li style="margin: 6px 0px 6px 0px">
-                          <span class="badge" onclick="javascript:Baseliner.show_topic(<% $topic->{id} %>, '<% $topic->{name} %>')" 
+                          <span class="badge" onclick="javascript:Baseliner.show_topic(<% $topic->{mid} %>, '<% $topic->{name} %>')" 
                             style="float:left;padding:2px 8px 2px 8px;cursor:pointer;background: <% $topic->{color} %>"><% $topic->{name} %></span>
                             &nbsp;&nbsp;<b><% $topic->{title} %></b>
                       </li>
