modificacion en deadline

--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -48,7 +48,7 @@
               </tr>
               <tr>
                 <th><% _loc('Deadline') %>:</th>
-                <td><% $deadline->dmy%> <%$deadline->hms || '&nbsp;' %></td>
+                <td><% $deadline ? $deadline->dmy . ' ' . $deadline->hms : '&nbsp;' %></td>
               </tr>              
               <tr>
                 <th colspan="2"><% _loc('Description') %>:</th>
