top jsquery adapter

--- a/root/site/top.html
+++ b/root/site/top.html
@@ -13,10 +13,12 @@
 % }
 
     <!--JQuery -->
-    <script type="text/javascript" src="/site/bootstrap/js/jquery-1.7.2.js"></script>
+    <script type="text/javascript" src="/static/jquery/jquery-1.7.1.min.js"></script>
+    <!--JQuery draggable plugin, etc -->
+    <script type="text/javascript" src="/static/jquery/jquery-ui-1.8.17.custom.min.js"></script>
     
     <!-- ExtJS -->
-    <script type="text/javascript" src="/static/ext/jquery/ext-jquery-adapter<% $debug %>.js"></script>
+    <script type="text/javascript" src="/static/ext/adapter/jquery/ext-jquery-adapter<% $debug %>.js"></script>
     <link rel="stylesheet" href="/static/metal/metal.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="/static/ext/resources/css/ext-all.css" />
 
